--- a/transform_EX2.css
+++ b/transform_EX2.css
@@ -4,11 +4,11 @@
 body{width: 100%;height: 100vh;}
 /*=== Start Section ===*/
 body section{width:650px;height:630px;position:fixed;top:50%;left:50%;border:5px solid  rgb(22,35,69);transform:translate(-50%,-50%);}
-body section .square_1{width: 180;height: 180;position: relative;top: 20%;transform: rotate(45deg) scale(1.57);background-color: rgb(141, 0, 0);margin: 0px auto;border: 3px solid black;}
+body section .square_1{width: 180px;height: 180px;position: relative;top: 20%;transform: rotate(45deg) scale(1.57);background-color: rgb(141, 0, 0);margin: 0px auto;border: 3px solid black;}
     /* start content_bottom */
 body section .content_botttom{position: relative;top:139px; display: flex;margin: 0px auto;width: max-content;}
     /* start rectangle 2-3 */
-body section .content_botttom .rectangle_2 , .rectangle_3{width: 195px;height: 175;border: 4px solid black;margin:4px;}
+body section .content_botttom .rectangle_2 , .rectangle_3{width: 195px;height: 175px;border: 4px solid black;margin:4px;}
 body section .content_botttom .rectangle_2{transform: skewY(45deg);background-color: rgb(37, 99, 255);}
 body section .content_botttom .rectangle_3{transform: skewY(-45deg);background-color: rgb(0, 182, 206);}
 /*=== End Section ===*/
